src/djehuty/web/resources/static/css/main.css
/* ... */
table.corporate-identity-table { border-spacing: 0; }
.corporate-identity-table tbody tr td { padding: .5em; z-index: 50; white-space: nowrap; }
.corporate-identity-table thead tr th:last-child { text-align: right; }
.corporate-identity-table tbody tr:nth-child(even) { background: #fafafa; }
.corporate-identity-table tbody tr:nth-child(odd) { background: #fff; }
.corporate-identity-table tbody tr td:last-child { text-align: right; width: 130pt; }
.corporate-identity-table tbody tr td:nth-child(1) {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    max-width: 572pt;
}

#corporate-identity-logo { content: url("/static/images/logo.png"); height: 60px; }
#logo { height: 60px; } /* Backward compatibility: Remove after a week. */

body,html {
    width: 100%;
    height: 100%;
    padding: 0em;
    margin: 0em;
    font-family: 'SourceSans', sans-serif;
    font-size: 12pt;
    color: #000000;
}
#wrapper {
    width: 100%;
    min-height: 100%;
    padding: 0em;
    margin: 0em auto auto auto;
    border: none;
}
#content {
    max-width: 880pt;
    min-height: 200mm;
    margin: 0 auto;
    padding: 0;
    color: #000000;
}
#content-wrapper { padding: 5mm; }
#header img {
    padding: 15px 0px 25px 15px;
    margin: 0em;
    max-height: 100px;
}
#header {
    column-count: 3;
    column-gap: 0pt;
    height: 100px;
    width: auto;
    text-align: center;
    color: #333333;
    user-select: none;
    background-color: #fff;
}
#header-left  {  display: block; height: 100px; text-align: left; }
#header-middle { display: block; height: 100px; text-align: center; }
#header-right {  display: block; height: 100px; text-align: right; }
#header-right .fas {
    padding: .5em;
    border-radius: .5em;
    text-align: center;
}
.button {
    margin: 25px auto auto auto;
    display: inline-block;
    padding: .5em;
    border-radius: .5em;
    text-transform: uppercase;
    font-size: 14pt;
    font-weight: bold;
    user-select: none;
}
.cancel-button { background: #990000; color: #fff; }
.cancel-button:hover {
    background: #660000;
    cursor: pointer;
    color: #fff;
    text-decoration: none;
}
.cancel-button:active {
    background: #330000;
    cursor: pointer;
    color: #fff;
    text-decoration: none;
}
.cancel-button {
    color: #fff;
    font-weight: bold;
    text-decoration: none;
}
#login-button a { color: #ffffff; text-decoration: none; }
#dashboard-button { margin-left: .5em; background: #505050; color: #ffffff; }
#dashboard-button:hover { background: #303030; cursor: pointer; }
#dashboard-button:active { background: #000000; cursor: pointer; }
#dashboard-button a { color: #ffffff; text-decoration: none; }
#logout-button { color: #cc0000; }
#logout-button:hover { color: #ff0000; cursor: pointer; }

#site-navigation {
    border-bottom: solid 1px #dddddd;
    background: #f9f9f9;
    background: linear-gradient(0deg, rgba(249,249,249,1) 0%, rgba(255,255,255,1) 100%);
}
#site-navigation ul {
    padding: 0pt;
    margin: 5pt 5pt 5pt 0pt;
    user-select: none;
}
#primary-menu-wrapper {
    width: 880pt;
    margin: 0 auto;
}
#primary-menu .menu-item-has-children:not(.hideshow)::after {
    content: '\f0d7';
    font-family: "Font Awesome 6";
    font-weight: 900;
    color: #a0a0a0;
}
#primary-menu li {
    display: inline-block;
    list-style-type: none;
    text-decoration: none;
    color: #000000;
    font-size: 15pt;
    padding: 5pt 5pt 5pt 0pt;
    margin: 0em .25em 0em 0em;
    user-select: none;
}
#site-navigation ul:first-child { margin-left: 5mm; }
#primary-menu .menu-item-has-children:hover > ul {
    background: #ffffff;
    display: block;
    min-width: 120pt;
}
#primary-menu li a { text-decoration: none; }
.submenu {
    position: absolute;
    display: none;
    max-width: 220pt;
    background: #f1f1f1;
    border: solid 1pt #ccc;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.25);
    border-radius: .5em;
    margin: 0pt !important;
    padding: 0pt 10pt 0pt 10pt;
    overflow: hidden;
    z-index: 1;
}
nav { display: block; padding-top: 1pt; }
.submenu li {
    position: block;
    display: none;
    list-style-type: none;
    text-decoration: none;
    font-size: 12pt;
    font-weight: normal;
    width: 100%;
    min-width: 100pt;
    margin: 0pt 10pt 10pt 10pt;
    padding: 5pt 10pt 5pt 10pt !important;
    user-select: none;
    text-transform: none !important;
    z-index: 0;
}
.submenu li:nth-child(even) {
    background: #fafafa !important;
}
.menu-item a { color: #505050; }
.menu-item a:hover { color: #303030; }
.submenu-item a { font-size: 13pt; color: #000000; }
.submenu-item a:hover { color: #333333; }
#footer {
    height: auto;
    width: 100%;
    margin: 0em;
    padding: auto;
    text-align: center;
}
#footer p { padding: 0.5em 0em 0em 0em; margin: 0em; }
#footer a { color: #ffffff; }
#footer a:hover { color: #cccccc; }
h1 {
    margin: 5px;
    color: #000000;
    padding: 0em;
    margin: 0em;
    font-family: 'SourceSans', sans-serif;
    font-weight: normal;
    text-transform: uppercase;
}
a {
    color: #000000;
    text-decoration: underline;
    font-family: 'SourceSans', sans-serif;
}
a:hover {
    color: #666666;
    text-decoration: underline;
}
#description pre {
    border: none;
    background: #f9f9f9;
    padding: 0em;
    margin: 0em auto 0em auto;
    white-space: normal;
}
#description pre code { padding: 0em; }
pre {
    border: 2pt dashed #ccc;
    background: #f9f9f9;
    font-size: 12pt;
    padding: 1em;
    -webkit-border-radius: 5pt;
    -moz-border-radius: 5pt;
    border-radius: 5pt;
}
#login-panel {
    display: block;
    position: relative;
}

.logos { display: block; height: 40px; }

#whitelogos {
    max-width: 880pt;
    margin: 0 auto;
    padding: 0;
    text-align: right;
    user-select: none;
}

#whitelogos img { margin: 10px; }

#footer-wrapper2 a { text-decoration: none; color: #fff; }
#footer-wrapper2 p { line-height: 60px; color: #aaa; }
/* ... */

